css/general.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  background-color: #FFF;
}

.img-flex {
  display: block;
  width: 100;
  margin: 0 auto;
}

.skip-links {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.skip-links a {
  position: absolute;
  top: -3em;
  background-color: #000;
  color: #fff;
  font-family: 'Cutive Mono', sans-serif;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0.5em 0.75em;
  font-weight: bold;
}

.skip-links a:focus {
  top: 0;
}

h1 {
  text-align: center;
  padding: 0 2rem;
  background-size: .3em auto;
  display: inline-block;
  font-family: 'Questrial', sans-serif;
  text-transform: lowercase;
  font-size: 2rem;
  margin-top: 1em;
}

.jesspaget {
  margin: 0;
}

.header {
  text-align: center;
  margin-top: 1em;
}

.spider1 {
  max-height: 7rem;
  margin-top: -2rem; 
  display: inline-block;
  float: left;
}

.info {
  text-align: center;
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  font-family: 'Cutive Mono', sans-serif;
  text-transform: lowercase;
  font-size: .8rem;
}

.para {
  color: #000;
}

.email {
  text-transform: lowercase;
}

footer p {
  color: #FFF;
  margin-bottom: 4em;
}

.socialmedia {
  list-style-type: none;
  text-align: center;
  padding: 0;
  margin-top: -1.3rem;
  margin-bottom: 0;
}

.instagram {
  height: 3em;
  width: 3em;
  background-image: url(../images/instagram.svg);
  background-repeat: no-repeat;
}

.instagramfooter {
  height: 3em;
  width: 3em;
  background-image: url(../images/instagramfooter.svg);
  background-repeat: no-repeat;
}

.behance {
  height: 3em;
  width: 3em;
  background-image: url(../images/behance.svg);
  background-repeat: no-repeat;
}

.behancefooter {
  height: 3em;
  width: 3em;
  background-image: url(../images/behancefooter.svg);
  background-repeat: no-repeat;
}

.tumblr {
  height: 3em;
  width: 3em;
  background-image: url(../images/tumblr.svg);
  background-repeat: no-repeat;
}

.tumblrfooter {
  height: 3em;
  width: 3em;
  background-image: url(../images/tumblrfooter.svg);
  background-repeat: no-repeat;
}

.linkedin {
  height: 3em;
  width: 3em;
  background-image: url(../images/linkedin.svg);
  background-repeat: no-repeat;
}

.linkedinfooter {
  height: 3em;
  width: 3em;
  background-image: url(../images/linkedinfooter.svg);
  background-repeat: no-repeat;
}

.icon {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  padding-bottom: 0;
}

.nav {
  margin: 0 3rem 0 3rem;
  padding: 0;
  list-style-type: none;
  display: none;
  position: relative;
}

.nav a {
  display: block;
  padding: .3em .8em;
  background-color: #000;
  text-align: center;
  border-bottom: 1px solid #FFF;
  text-decoration: none;
  font-family: 'Cutive Mono', sans-serif;
  text-transform: lowercase;
  font-size: .85rem;
  color: #FED245;
}

.nav a:hover {
  color: black;
  background-color: #FED245;
}

.nav-check {
  position: absolute;
  top: -3em;
}

.nav-check:checked ~ .nav {
  display: block;
}

.nav-label {
  cursor: pointer;
  width: 30px;
  z-index: 1;
  display: inline-block;
  margin-top: -4em;
}

.nav-open {
  height: 1.5em;
}

.nav-open,
.nav-close {
  display: block;
  width: 100%;
}

.nav-close {
  display: none;
  margin-top: -1.2em;
}

.nav-check:checked ~ .nav-label .nav-open {
  display: none;
}

.nav-check:checked ~ .nav-label .nav-close {
  display: block;
}

#galleryphotos {
  margin: 0;
  padding: 0;
}

.bodyimages {
  z-index: 0;
  position: relative;
  top: 1em;
}

.images {
  display: block;
  margin: auto;
  margin: auto;
  position: relative;
  width: 100%;
}

.infotitle {
  text-align: center;
  padding: 0;
  margin-bottom: 0;
  font-family: 'Audiowide', sans-serif;
  font-size: 3rem;
}

.myface {
  width: 20rem;
  margin-top: 1rem;
  margin-left: auto;
  margin-right: auto;
  border: solid 4px black;
  display: block;
}

h3 {
  font-family: 'Questrial', sans-serif;
  text-align: center;
  margin: 1em;
  text-transform: lowercase;
}

.infoinfo {
  margin: 2em;
}

.infoemail {
  text-transform: uppercase;
  font-weight: bold;
}

.infoemailyellow {
  text-transform: uppercase;
  font-weight: bold;
  color: #FED245;
}

.port-title {
  color: #0B8599;
  text-transform: uppercase;
  padding-top: 4.5em;
  text-align: center;
}

.portfolio-intro {
  left: 2em;
  margin: 1em;
  padding: 5%;
  padding-top: 0;
  text-align: center;
}

.item a p {
  color: #FED245;
}

.port-box {
  width: 100%;
}

.port-squares {
  padding: 1em;
  display: block;
  text-align: center;
}

.port-text {
  padding: 1rem;
  display: block;
  background-color: #333333;
  color: #0B8599;
  display: none;
}

.item {
  transition-property: transform;
  
  -webkit-transition: all .1s ease;
  -o-transition: all .1s ease;
  -moz-transition: all .1s ease;
  transition: all .1s ease;
}

.item img {
  display: block;
}

.hover-box {
  display: block;
  position: relative;
  margin: 0;
}

.hover-box img {
  display: block;
}

.hover-box p {
  position: absolute;
  top: 10px;
  bottom: 10px;
  left: 10px;
  right: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  margin: 0;
  color: white;
  font-size: 1.5em;
  text-align: left;
  padding-left: 1em;
  padding-top: 1em;
  text-transform: uppercase;
  font-family: 'Cutive Mono', sans-serif;
  
  display: none;
}

.hover-box:hover p {
  
  display: block;
}

/* ************ PORTFOLIO SLIDE OUT PAGES ************ */

.portfolio-slide-open {
  position: fixed;
  top: 0;
  left: 100%;
  bottom: 0;
  height: 100vh;
  width: 100%;
  transition: all .1s ease;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.portfolio-slide-open:target {
  left: 0;
}

.exit {
  text-decoration: none;
  height: 2.3em;
  position: absolute;
  top: 1.7em;
  margin-bottom: 2em;
}

.exit p {
  color: #FED245;
  font-family: 'Cutive Mono', sans-serif;
  font-size: 2em;
  text-align: left;
  margin: 0;
  padding-left: .5em;
  padding-bottom: .5em;
  padding-top: .1em;
}

.portfoliotext {
  font-family: 'Cutive Mono', sans-serif;
  font-size: 1em;
  margin-top: 2em;
  text-align: center;
}

.portfoliosubheads {
  font-family: 'Cutive Mono', sans-serif;
  font-size: .8em;
  margin-top: 2em;
  text-align: center;
  text-transform: lowercase;
  font-size: .7rem;
}

.portfolio-title {
  margin-top: 0;
  margin-bottom: 2em;
  padding-bottom: 1rem;
  font-size: 1.5rem;
  text-align: center;
  font-family: 'Questrial', sans-serif;
  text-transform: lowercase;
}

.portfolio-title-div {
  margin-bottom: 4em;
}

.portimages {
  margin-bottom: 0;
  max-width: 100%;
}

.text {
  background-color: white;
  overflow-y: auto;
  padding: 2em 2em 0;
  text-align: center;
  width: 100%;
}

.text h3 {
  margin-bottom: -1em;
}

.text img {
  margin-bottom: 1em;
  width: 100%;
}

.footer {
  background-color: #000;
  color: #FED245;
  padding: 2rem 1rem;
  font-size: 0.75rem;
  text-transform: uppercase;
  font-family: 'Cutive Mono', sans-serif;
  text-align: center;
}

.footer p {
  margin: 0;
}

.footera {
  text-decoration: none;
  color: #FED245;
  font-size: 1.5rem;
}

.error {
  text-align: center;
}

.errorpageh1 {
  text-align: center;
  font-family: 'Cutive Mono', sans-serif;
  font-size: 2rem;
  margin-bottom: -1rem;
  color: #FED245;
}

.errorpagep {
  text-align: center;
  font-family: 'Questrial', sans-serif;
  font-size: 1rem;
}

@media only screen and (min-width: 25em) {

}

@media only screen and (min-width: 38em) {
  
  .header {
    text-align: center;
  }
  
  .nav-label {
    cursor: pointer;
    width: 30px;
    z-index: 1;
    display: inline-block;
  }
  
  .infoinfo {
    max-width: 35rem;
    margin: 0 auto;
    padding: 1em;
  }
  
  .item a p {
    font-size: 1em;
  }
  
  .socialmedia {
    list-style-type: none;
    text-align: center;
    padding: 0;
    margin-top: -1.3rem;
    margin-bottom: 0;
  }
  
    .nav li {
      width: 20rem;
      text-align: center;
      display: block;
      margin: 0 auto;
    }
  
    .portfolio-title {
      font-size: 2.3rem;
    }
  
    .portfoliosubheads {
      font-size: .8rem;
      margin-left: 5rem;
      margin-right: 5rem;
    }
}

@media only screen and (min-width: 60em) {
  
  .headername {
    text-align: center;
  }
  
  .info-photo-text {
    margin-left: 3rem;
  }
  
  .header {
    text-align: left;
  }
  
  .myface {
    margin-top: 3.4rem;
  }
  
  h3 {
    margin-bottom: 2rem;
  }
  
  .exit {
    left: 2em;
  }
  
  .nav-label {
    cursor: pointer;
    width: 30px;
    z-index: 1;
    display: inline-block;
  }
  
  .socialmedia {
    list-style-type: none;
    text-align: left;
    padding: 0;
    margin-top: 1rem;
  }
  
  .socialmediafooter {
    list-style-type: none;
    text-align: center;
    padding: 0;
  }
  
  .icon {
    display: inline-block;
    width: 1.5rem;
    height: 1.5rem;
    padding-bottom: 0; 
  }
  
  .nav-label {
    cursor: pointer;
    width: 30px;
    z-index: 1;
    display: inline-block;
  }

  .nav-open,
  .nav-close {
    display: block;
    width: 100%;
    visibility: hidden;
  } 

  .nav-close {
    display: none;
  }
  
  .nav {
    padding: 0;
    list-style-type: none;
    display: inline-block;
    position: relative;
    left: -8rem;
    top: 4.1rem;
  }

  .nav-check:checked ~ .nav-label .nav-open {
    display: none;
  }

  .nav-check:checked ~ .nav-label .nav-close {
    display: block;
  }
  
  .nav a {
    display: block;
    background-color: white;
    padding: .3em .8em;
    margin-right: 1.5em;
    text-align: left;
    border-bottom: 1px solid #FFF;
    float: left;
    text-decoration: none;
    font-family: 'Cutive Mono', sans-serif;
    text-transform: lowercase;
    font-size: .85rem;
    color: #FED245;
  }
  
  .item a p {
    font-size: 1.7em;
  }
  
  .nav a:hover {
    color: black;
    background-color: white;
  }
  
  h3 {
    text-align: left;
    margin-left: .4em;
    margin-top: 3rem;
  }
  
  .exit {
    left: 4em;
  }
  
  .info {
    margin-left: 0;
  }
  
  .infoinfo {
    text-align: left;
    margin-right: 17rem;
  }
  
  .main {
    margin-bottom: 4rem;
  }   
  
  .portfolio-content {
    margin-left: 4rem;
    margin-right: 4rem;
  }
  
  .portfoliosubheads {
    margin-left: 13rem;
    margin-right: 13rem;
  }
}

